<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EquipmentActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/weapons"
        android:layout_marginTop="150dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/weapons"
        android:onClick="onWeaponsClick"/>

    <Button
        android:id="@+id/button5"
        android:layout_marginTop="50dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/callers"
        android:onClick="onCallersClick"/>

    <Button
        android:id="@+id/decoys"
        android:layout_marginTop="50dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/decoys"
        android:onClick="onDecoysClick"/>

    </LinearLayout>

</ScrollView>