<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeaponDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/weapon_photo"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            app:srcCompat="@android:mipmap/sym_def_app_icon" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weapon_name"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/weapon_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weapon_price"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/weapon_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weapon_magazine"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/weapon_magazine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weapon_cartridge"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/weapon_cartridge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weapon_recommended_animals"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/weapon_recommended_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_weapons"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:menu="@menu/bottom_bar_menu" />


    </LinearLayout>


</ScrollView>